encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/select_wrong_arity.stderr
error: select needs 2 args
 --> tests/compile_fail/select_wrong_arity.rs:8:18
  |
8 |     let x = flag.select(&a);
  |                  ^^^^^^
